--- a/JoystickTesting/templates/testing.html
+++ b/JoystickTesting/templates/testing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="style.css">
 <title>Page Title</title>
 </head>
 <body>
@@ -18,9 +19,12 @@
 
     </script> -->
 
-<h1>My First Heading</h1>
+<h1>Robot Escape Room</h1>
 <p>My first paragraph.</p>
 <p id="demo"></p>
+<video width="640" height="480" controls>
+	<source src="testVid.mp4" type="video/mp4">
+</video>
 
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
