--- a/JoystickTesting/templates/style.css
+++ b/JoystickTesting/templates/style.css
@@ -3,15 +3,15 @@
 }
 
 head {
-    background-color: #3b3b3b;
+    background: #090909;
 }
 
 body {
-    background-color: #3b3b3b;
+    background: #090909;
 }
 
 h1 {
-    color: #d4d4d4;
+    color: #006614;
     border-style: solid;
     border-radius: 7px;
     font-family: "Verdana", sans-serif;
@@ -20,16 +20,37 @@ h1 {
     margin-right: 30%;
 }
 
+h2 {
+    color: #006614;
+    border-style: solid;
+    border-radius: 7px;
+    font-family: "Verdana", sans-serif;
+    text-align: center;
+    margin-left: 95%;
+}
+
 p {
-    color: #d4d4d4;
+    color: #006614
     font-family: "Verdana", sans-serif;
     text-align: center;
 }
 
 video {
-    border: 3px #d4d4d4;
+    border: 7px #006614;
     border-style: solid;
     border-radius: 7px;
     margin-left: 33%;
     position: relative;
+}
+
+p1 {
+    color: #006614;
+    font-family: "Verdana", sans-serif;
+    font-size: 20px;
+    border: 3px #006614;
+    border-style: solid;
+    border-radius: 7px;
+    padding-right: 48%;
+    padding-bottom: 5%;
+    margin-left: 25%;
 }
