--- a/JoystickTesting/templates/testing.html
+++ b/JoystickTesting/templates/testing.html
@@ -20,12 +20,13 @@
     </script> -->
 
 <h1>Robot Escape Room</h1>
-<p>My first paragraph.</p>
+<h2>60:00</h2>
 <p id="demo"></p>
 <video width="640" height="480" controls>
 	<source src="testVid.mp4" type="video/mp4">
 </video>
-
+<h3></h3>
+<p1>Hints:</p1>
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
 
