made webcar.py and RobtoCam.py, robot versions of testing and robtocamtest

--- a/JoystickTesting/templates/testing.html
+++ b/JoystickTesting/templates/testing.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8  offset-lg-2">
-            <img src="video_feed" width="100%"><!--multipart/x-mixed-replace; boundary=frame-->
+            <img src="video_feed" width="50%"><!--width="100%"><!--multipart/x-mixed-replace; boundary=frame-->
         </div>
     </div>
 </div>
