--- a/JoystickTesting/templates/testing.html
+++ b/JoystickTesting/templates/testing.html
@@ -430,6 +430,34 @@ function updateStatus() {
 	}
 	//console.log(" ");
   requestAnimationFrame(updateStatus);
+  /*ANIMATIONFRAME, TODO
+  https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame
+  
+  Warning: Be sure to always use the first argument 
+	(or some other method for getting the current time) 
+	to calculate how much the animation will progress in a frame, 
+	otherwise the animation will run faster on high refresh rate screens. 
+  Check the example below for a way to do this.
+  */
+  /*
+  function step(timestamp) {
+	  if (start === undefined) {
+		start = timestamp;
+		}
+	  const elapsed = timestamp - start;
+
+	  if (previousTimeStamp !== timestamp) {
+		// Math.min() is used here to make sure the element stops at exactly 200px
+		const count = Math.min(0.1 * elapsed, 200);
+		element.style.transform = 'translateX(' + count + 'px)';
+	  }
+
+	  if (elapsed < 2000) { // Stop the animation after 2 seconds
+		previousTimeStamp = timestamp
+		window.requestAnimationFrame(step);
+	  }
+	}
+  */
 }
 
 function scangamepads() {
