Added CSS into main

--- a/JoystickTesting/templates/style.css
+++ b/JoystickTesting/templates/style.css
@@ -29,8 +29,17 @@ h2 {
     margin-left: 95%;
 }
 
+h3 {
+    color: #006614;
+    border-style: solid;
+    border-radius: 7px;
+    font-family: "Verdana", sans-serif;
+    text-align: center;
+    margin-left: 95%;
+}
+
 p {
-    color: #006614
+    color: #006614;
     font-family: "Verdana", sans-serif;
     text-align: center;
 }
@@ -41,16 +50,4 @@ video {
     border-radius: 7px;
     margin-left: 33%;
     position: relative;
-}
-
-p1 {
-    color: #006614;
-    font-family: "Verdana", sans-serif;
-    font-size: 20px;
-    border: 3px #006614;
-    border-style: solid;
-    border-radius: 7px;
-    padding-right: 48%;
-    padding-bottom: 5%;
-    margin-left: 25%;
 }
