Adjusted CSS and html file -Matt

--- a/JoystickTesting/static/styles/style.css
+++ b/JoystickTesting/static/styles/style.css
@@ -20,34 +20,32 @@ h1 {
     margin-right: 30%;
 }
 
-h2 {
-    color: #006614;
-    border-style: solid;
-    border-radius: 7px;
-    font-family: "Verdana", sans-serif;
-    text-align: center;
-    margin-left: 95%;
-}
-
-h3 {
-    color: #006614;
-    border-style: solid;
-    border-radius: 7px;
-    font-family: "Verdana", sans-serif;
-    text-align: center;
-    margin-left: 95%;
-}
-
 p {
     color: #006614;
     font-family: "Verdana", sans-serif;
-    text-align: center;
-}
-
-video {
-    border: 7px #006614;
     border-style: solid;
     border-radius: 7px;
-    margin-left: 33%;
-    position: relative;
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+img {
+    display: block;
+    border: 7px #006614;
+    border-style: solid;
+    width: 600px;
+    height: 450px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+label {
+    color: #006614;
+    border-style: solid;
+    border-radius: 7px;
+    font-family: "Verdana", sans-serif;
+    text-align: left;
+    margin-left: 95%;
+    padding: 3px;
 }
