--- a/JoystickTesting/templates/testing.html
+++ b/JoystickTesting/templates/testing.html
@@ -6,16 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='styles/style.css')}}">
 
-<title>Page Title</title>
+<title>Robot Escape Room MQP</title>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8  offset-lg-2">
-            <img src="video_feed" width="50%"><!--width="100%"><!--multipart/x-mixed-replace; boundary=frame-->
-        </div>
-    </div>
-</div>
+
 <!-- <script language="javascript" type="text/javascript" src="/functions.js"></script>
     <script language="javascript">
 		/*
@@ -29,11 +23,19 @@
       }*/
 
     </script> -->
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<label for="Timer">60:00</label>
+<h1>Escape with Robto</h1>
 <p id="demo"></p>
 
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8  offset-lg-2">
+            <img src="video_feed" width="50%"><!--width="100%"><!--multipart/x-mixed-replace; boundary=frame-->
+        </div>
+    </div>
+</div>
+
+<p>Hints:</p>
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
 
